--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,9 +13,7 @@
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
     integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
     crossorigin=""></script>
-    <style>
-        
-    </style>   
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -24,6 +22,6 @@
         </div>
     </div>
 
-    <script src="http://localhost:8080/assets/dev/main.js"></script>    
+    <script src="http://localhost:4000/assets/dev/main.js"></script>    
 </body>
 </html>
